
/*------------------------------------------------------------------------------
 * AUTO GENERATED
 *----------------------------------------------------------------------------*/

syntax = "proto3";
package caikit_data_model.nlp;


/*-- ENUMS -------------------------------------------------------------------*/

enum FinishReason {
  NOT_FINISHED = 0;
  MAX_TOKENS = 1;
  EOS_TOKEN = 2;
  CANCELLED = 3;
  TIME_LIMIT = 4;
  STOP_SEQUENCE = 5;
  TOKEN_LIMIT = 6;
  ERROR = 7;
}
