
/*------------------------------------------------------------------------------
 * AUTO GENERATED
 *----------------------------------------------------------------------------*/

syntax = "proto3";
package caikit_data_model.nlp;
import "caikit_data_model.nlp.finishreason.proto";


/*-- MESSAGES ----------------------------------------------------------------*/

message TokenStreamDetails {

  /*-- fields --*/
  caikit_data_model.nlp.FinishReason finish_reason = 1;
  uint32 generated_tokens = 2;
  uint64 seed = 3;
  int64 input_token_count = 4;
}
